policy/cluster/tests/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: default
spec:
  containers:
    - name: app
      image: us-central1-docker.pkg.dev/demo/platform/hello-api:1.0.0
      securityContext:
        privileged: false
        allowPrivilegeEscalation: false
      resources:
        requests:
          cpu: 250m
          memory: 256Mi
        limits:
          memory: 256Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: no-resources-pod
  namespace: default
spec:
  containers:
    - name: app
      image: us-central1-docker.pkg.dev/demo/platform/hello-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: latest-tag-pod
  namespace: default
spec:
  containers:
    - name: app
      image: nginx:latest
      resources:
        requests:
          cpu: 250m
          memory: 256Mi
        limits:
          memory: 256Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
  namespace: default
spec:
  containers:
    - name: app
      image: us-central1-docker.pkg.dev/demo/platform/hello-api:1.0.0
      securityContext:
        privileged: true
      resources:
        requests:
          cpu: 250m
          memory: 256Mi
        limits:
          memory: 256Mi
